--- a/session3/async-data.ipynb
+++ b/session3/async-data.ipynb
@@ -5,7 +5,7 @@
    "id": "3c7368f0",
    "metadata": {},
    "source": [
-    " Create Types based on objects"
+    " Async Data Pattern"
    ]
   },
   {
@@ -36,29 +36,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "988d79e9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "type LoadedResult<T> = {\n",
-    "    state: 'loaded'\n",
-    "    data: T\n",
-    "}\n",
-    "\n",
-    "type ErrorResult = {\n",
-    "    state: 'error'\n",
-    "    error: string\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "0f9aae07",
    "metadata": {},
    "outputs": [],
    "source": [
-    "type Result<T> = { state: 'initial' | 'loading' } | LoadedResult<T> | ErrorResult"
+    "type AsyncData<T> = {\n",
+    "    state: State\n",
+    "    data?: T\n",
+    "}"
    ]
   }
  ],
