few patterns added

--- a/session3/singleton.ipynb
+++ b/session3/singleton.ipynb
@@ -27,7 +27,12 @@
    "id": "1c43aee0",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "export const environment = {\n",
+    "    baseUrl: 'https://api.gcp.com',\n",
+    "    timeout: 5000\n",
+    "} as const"
+   ]
   }
  ],
  "metadata": {
