type operator added

--- a/session3/mapped-types.ipynb
+++ b/session3/mapped-types.ipynb
@@ -48,6 +48,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e6f7f11f",
+   "metadata": {},
+   "source": [
+    "Make types more readable"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "48f7e2a9",
@@ -89,6 +97,38 @@
    "outputs": [],
    "source": [
     "type StrictOmit<T, K extends keyof T> = Omit<T, K>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "91a4d03f",
+   "metadata": {},
+   "source": [
+    "Custom Omit type"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e8cf7471",
+   "metadata": {
+    "vscode": {
+     "languageId": "typescript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "type MyOmit<T, K extends keyof T> = {\n",
+    "    [P in keyof T as P extends K ? never : P]: T[K]\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b2171a9e",
+   "metadata": {},
+   "source": [
+    "Complex Type Manipulation"
    ]
   },
   {
