--- a/session3/utility-types.ipynb
+++ b/session3/utility-types.ipynb
@@ -71,7 +71,7 @@
    },
    "outputs": [],
    "source": [
-    "type UserDto = Omit<UserEntity, 'id'>"
+    "type UserDto = Omit<UserEntity, 'id' | 'middlename'>"
    ]
   },
   {
@@ -94,6 +94,83 @@
    "outputs": [],
    "source": [
     "type User = Required<UserEntity>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f5ce73da",
+   "metadata": {},
+   "source": [
+    "### 4. Readonly"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d95d8d35",
+   "metadata": {
+    "vscode": {
+     "languageId": "typescript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "type ReadOnlyUser = Readonly<UserEntity>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ff0f131e",
+   "metadata": {},
+   "source": [
+    "### 5. Record"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8a7e1175",
+   "metadata": {
+    "vscode": {
+     "languageId": "typescript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "type CatName = \"miffy\" | \"boris\" | \"mordred\";\n",
+    " \n",
+    "interface CatInfo {\n",
+    "  age: number;\n",
+    "  breed: string;\n",
+    "}\n",
+    " \n",
+    "const cats: Record<CatName, CatInfo> = {\n",
+    "  miffy: { age: 10, breed: \"Persian\" },\n",
+    "  boris: { age: 5, breed: \"Maine Coon\" },\n",
+    "  mordred: { age: 16, breed: \"British Shorthair\" },\n",
+    "};"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4d40238b",
+   "metadata": {},
+   "source": [
+    "### 6. Pick"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9d760772",
+   "metadata": {
+    "vscode": {
+     "languageId": "typescript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "type Person = Pick<User, 'firstname' | 'lastname'>"
    ]
   }
  ],
