--- a/session3/type-operator.ipynb
+++ b/session3/type-operator.ipynb
@@ -20,11 +20,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "1f50c254",
-   "metadata": {
-    "vscode": {
-     "languageId": "typescript"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "const point = {\n",
@@ -39,11 +35,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "e763aced",
-   "metadata": {
-    "vscode": {
-     "languageId": "typescript"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "const MyArray = [\n",
@@ -69,20 +61,88 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "e6c21514",
-   "metadata": {
-    "vscode": {
-     "languageId": "typescript"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "type P = keyof Point;"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "69a64b2d",
+   "metadata": {},
+   "source": [
+    "Use Cases: Helpful in creating enums"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "067db322",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "// In code, we need to use proper name but value should be in numbers\n",
+    "\n",
+    "const orderStatus = {\n",
+    "    pending: 1,\n",
+    "    delivered: 2,\n",
+    "    returned: 3\n",
+    "} as const\n",
+    "\n",
+    "// httpStatus.ok = 400;\n",
+    "\n",
+    "type OrderStatus = typeof orderStatus[keyof typeof orderStatus]\n",
+    "\n",
+    "function hasDelivered(status: OrderStatus): boolean {\n",
+    "    return status !== 1;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ade6c969",
+   "metadata": {},
+   "source": [
+    "Ternary Operator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "1d2bc3ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "type Result<T, U> = T extends string ? U : T;\n",
+    "\n",
+    "function parseValue<T, U>(input: T): Result<T, U> {\n",
+    "  if (typeof input === 'string') {\n",
+    "    // Type assertion because TS can't infer runtime type narrowing for conditional types\n",
+    "    return JSON.parse(input) as Result<T, U>;\n",
+    "  }\n",
+    "  return input as Result<T, U>;\n",
+    "}\n",
+    "\n",
+    "// Usage:\n",
+    "const value = parseValue<string, Point>(`{\"x\": 100, \"y\": 10}`);"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Deno",
+   "language": "typescript",
+   "name": "deno"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": "typescript",
+   "file_extension": ".ts",
+   "mimetype": "text/x.typescript",
+   "name": "typescript",
+   "nbconvert_exporter": "script",
+   "pygments_lexer": "typescript",
+   "version": "5.9.2"
   }
  },
  "nbformat": 4,
