--- a/session3/utility-types.ipynb
+++ b/session3/utility-types.ipynb
@@ -137,7 +137,7 @@
    },
    "outputs": [],
    "source": [
-    "type CatName = \"miffy\" | \"boris\" | \"mordred\";\n",
+    "type CatName = \"miffy\" | \"boris\" | \"penny\";\n",
     " \n",
     "interface CatInfo {\n",
     "  age: number;\n",
@@ -147,8 +147,8 @@
     "const cats: Record<CatName, CatInfo> = {\n",
     "  miffy: { age: 10, breed: \"Persian\" },\n",
     "  boris: { age: 5, breed: \"Maine Coon\" },\n",
-    "  mordred: { age: 16, breed: \"British Shorthair\" },\n",
-    "};"
+    "  penny: { age: 16, breed: \"British Shorthair\" },\n",
+    "};\n"
    ]
   },
   {
