functional pattern added

--- a/session3/async-data.ipynb
+++ b/session3/async-data.ipynb
@@ -46,6 +46,27 @@
     "    error?: string\n",
     "}"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5579126f",
+   "metadata": {},
+   "source": [
+    "Helper Functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bee52676",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "const initalState = <T>() => ({ state: 'initial' }) as AsyncData<T>\n",
+    "const loadingState = <T>() => ({ state: 'loading' }) as AsyncData<T>\n",
+    "const loadedState = <T>(data: T) => ({ data, state: 'loaded' }) as AsyncData<T>\n",
+    "const errorState = <T>(error: string) => ({ error, state: 'error' }) as AsyncData<T>"
+   ]
   }
  ],
  "metadata": {
