--- a/session3/singleton.ipynb
+++ b/session3/singleton.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "96c350a1",
+   "metadata": {},
+   "source": [
+    "# Singleton"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ec0d2097",
+   "metadata": {},
+   "source": [
+    "Using Classes"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "fb0d5ff3",
@@ -19,6 +35,14 @@
     "}\n",
     "\n",
     "export const databaseConnection = new DatabaseConnection();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "38cc7cde",
+   "metadata": {},
+   "source": [
+    "Functional Style"
    ]
   },
   {
