--- a/session3/async-data.ipynb
+++ b/session3/async-data.ipynb
@@ -62,10 +62,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "const initalState = <T>() => ({ state: 'initial' }) as AsyncData<T>\n",
-    "const loadingState = <T>() => ({ state: 'loading' }) as AsyncData<T>\n",
-    "const loadedState = <T>(data: T) => ({ data, state: 'loaded' }) as AsyncData<T>\n",
-    "const errorState = <T>(error: string) => ({ error, state: 'error' }) as AsyncData<T>"
+    "const initalState = <T>() => ({ state: state.initial }) as AsyncData<T>\n",
+    "\n",
+    "const loadingState = <T>() => ({ state: state.loading }) as AsyncData<T>\n",
+    "\n",
+    "const loadedState = <T>(data: T) => ({ data, state: state.loaded }) as AsyncData<T>\n",
+    "\n",
+    "const errorState = <T>(error: string) => ({ error, state: state.error }) as AsyncData<T>"
    ]
   }
  ],
