--- a/session3/rxjs.ipynb
+++ b/session3/rxjs.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "1577ba68",
    "metadata": {},
    "outputs": [
@@ -25,15 +25,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Received: 0\n",
-      "Received: 1\n",
-      "Received: 2\n",
-      "Received: 3\n"
+      "Subscriber 1: 1\n",
+      "Subscriber 2: 2\n",
+      "Subscriber 1: 2\n",
+      "Subscriber 2: 4\n",
+      "Subscriber 1: 3\n",
+      "Subscriber 2: 6\n",
+      "Subscriber 1: 4\n",
+      "Subscriber 2: 8\n"
      ]
     }
    ],
    "source": [
-    "import { Subject } from 'npm:rxjs';\n",
+    "import { Subject, map } from 'npm:rxjs';\n",
     "\n",
     "let i = 1\n",
     "const observable = new Subject<number>();\n",
@@ -42,10 +46,11 @@
     "    observable.next(i++);\n",
     "}, 2000)\n",
     "\n",
-    "observable.subscribe({\n",
-    "  next: (value) => console.log('Received:', value),\n",
-    "  complete: () => console.log('Done!')\n",
-    "});\n",
+    "observable.subscribe((value) => console.log('Subscriber 1:', value));\n",
+    "\n",
+    "observable\n",
+    ".pipe(map(p => p * 2))\n",
+    ".subscribe((value) => console.log('Subscriber 2:', value));\n",
     "\n",
     "setTimeout(() => {\n",
     "    clearInterval(id);\n",
