--- a/session3/type-operator.ipynb
+++ b/session3/type-operator.ipynb
@@ -90,7 +90,7 @@
     "    returned: 3\n",
     "} as const\n",
     "\n",
-    "// httpStatus.ok = 400;\n",
+    "// orderStatus.pending = 400;\n",
     "\n",
     "type OrderStatus = typeof orderStatus[keyof typeof orderStatus]\n",
     "\n",
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "1d2bc3ac",
    "metadata": {},
    "outputs": [],
@@ -125,7 +125,8 @@
     "}\n",
     "\n",
     "// Usage:\n",
-    "const value = parseValue<string, Point>(`{\"x\": 100, \"y\": 10}`);"
+    "const value = parseValue<string, Point>(`{\"x\": 100, \"y\": 10}`);\n",
+    "const value2 = parseValue<number, Point>(5);"
    ]
   }
  ],
