--- a/session3/utility-types.ipynb
+++ b/session3/utility-types.ipynb
@@ -5,18 +5,16 @@
    "id": "ee86fad1",
    "metadata": {},
    "source": [
-    "# Utility Types"
+    "# Utility Types\n",
+    "\n",
+    "Easily create DTO types on the fly using in build utility types"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "6356832d",
-   "metadata": {
-    "vscode": {
-     "languageId": "typescript"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "// Consider User database entity\n",
@@ -42,11 +40,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "87f7bf15",
-   "metadata": {
-    "vscode": {
-     "languageId": "typescript"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "type UserPartial = Partial<UserEntity>"
@@ -64,11 +58,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "6e2d9ce2",
-   "metadata": {
-    "vscode": {
-     "languageId": "typescript"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "type UserDto = Omit<UserEntity, 'id' | 'middlename'>"
@@ -86,11 +76,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "f57cc3dc",
-   "metadata": {
-    "vscode": {
-     "languageId": "typescript"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "type User = Required<UserEntity>"
@@ -108,11 +94,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "d95d8d35",
-   "metadata": {
-    "vscode": {
-     "languageId": "typescript"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "type ReadOnlyUser = Readonly<UserEntity>"
@@ -123,18 +105,18 @@
    "id": "ff0f131e",
    "metadata": {},
    "source": [
-    "### 5. Record"
+    "### 5. Record\n",
+    "\n",
+    " - An object whose keys are of type K and whose values are of type T.\n",
+    " - Useful when you need a dictionary-like structure with known keys.\n",
+    " - NgRx Entity manages collections of entities in a normalized state. Instead of storing entities as arrays (which require iteration for lookups), it uses an object map for O(1) access."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "8a7e1175",
-   "metadata": {
-    "vscode": {
-     "languageId": "typescript"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "type CatName = \"miffy\" | \"boris\" | \"penny\";\n",
@@ -163,11 +145,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9d760772",
-   "metadata": {
-    "vscode": {
-     "languageId": "typescript"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "type Person = Pick<User, 'firstname' | 'lastname'>"
@@ -175,8 +153,19 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Deno",
+   "language": "typescript",
+   "name": "deno"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": "typescript",
+   "file_extension": ".ts",
+   "mimetype": "text/x.typescript",
+   "name": "typescript",
+   "nbconvert_exporter": "script",
+   "pygments_lexer": "typescript",
+   "version": "5.9.2"
   }
  },
  "nbformat": 4,
