--- a/session3/async-terator.ipynb
+++ b/session3/async-terator.ipynb
@@ -5,7 +5,11 @@
    "id": "e2fda80c",
    "metadata": {},
    "source": [
-    "Async Iterator"
+    "# Async Iterator\n",
+    "\n",
+    "- It is a pull based model, in which we can await on multiple promises one by one\n",
+    "- It is used by Gen AI chat to stream chunks of messages\n",
+    "- It is native functionality and simpler than pub sub"
    ]
   },
   {
