--- a/session3/command.ipynb
+++ b/session3/command.ipynb
@@ -15,7 +15,10 @@
    "source": [
     "### Object-Oriented Command Pattern\n",
     "\n",
-    "- In OOP, the Command Pattern encapsulates a request as an object, allowing you to parameterize clients with queues, requests, and operations."
+    "- It helps to simplify the execution of different operation with same structural type.\n",
+    "- Consider a photo editor which may have 100's of image operation buttons\n",
+    "- We can use command pattern for each buttons operation containing execute and undo functionality\n",
+    "- Instead of having if..else and mutliple method names, command pattern simplifies addition and execution of diff operation"
    ]
   },
   {
