--- a/session3/factory-pattern.ipynb
+++ b/session3/factory-pattern.ipynb
@@ -18,40 +18,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "59c6fb33",
    "metadata": {},
    "outputs": [],
    "source": [
-    "const devEnvironmen = {\n",
+    "const devEnvironment = {\n",
     "    baseUrl: 'http://localhost:3000'\n",
     "}\n",
     "\n",
-    "type Environment = typeof devEnvironmen;\n",
+    "type Environment = typeof devEnvironment;\n",
     "\n",
-    "const qaEnvironmen: Environment = {\n",
+    "const qaEnvironment: Environment = {\n",
     "    baseUrl: 'http://hostqa'\n",
     "}\n",
     "\n",
-    "const prodEnvironmen: Environment = {\n",
+    "const prodEnvironment: Environment = {\n",
     "    baseUrl: 'http://hostprod'\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "f10ebd17",
    "metadata": {},
    "outputs": [],
    "source": [
-    "function getEnv(): Environment {\n",
+    "function getEnv(env: string): Environment {\n",
     "    const map = new Map<string, Environment>();\n",
-    "    map.set('dev', devEnvironmen);\n",
-    "    map.set('qa', qaEnvironmen);\n",
-    "    map.set('prod', prodEnvironmen);\n",
+    "    map.set('dev', devEnvironment);\n",
+    "    map.set('qa', qaEnvironment);\n",
+    "    map.set('prod', prodEnvironment);\n",
     "\n",
-    "    return map.get(Deno.env.get(\"APP_ENV\") ?? \"dev\") ?? devEnvironmen\n",
+    "    return map.get(env ?? \"dev\") ?? devEnvironment\n",
     "}"
    ]
   },
