--- a/session3/functional.ipynb
+++ b/session3/functional.ipynb
@@ -5,7 +5,11 @@
    "id": "18696b6f",
    "metadata": {},
    "source": [
-    "# Functional Patterns"
+    "# Functional Patterns\n",
+    "\n",
+    "- Consider a user profile data which need to be manipulated\n",
+    "- There are steps of operation that needs to be performed\n",
+    "- Here we can use pipe operator pattern"
    ]
   },
   {
@@ -39,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "f02ac3cd",
    "metadata": {},
    "outputs": [
@@ -50,7 +54,12 @@
       "{\n",
       "  name: \"mihir jayavant\",\n",
       "  email: \"m***@**m\",\n",
-      "  createdAt: \"2025-11-10T17:24:12.502Z\"\n",
+      "  createdAt: \"2025-11-16T16:59:49.908Z\"\n",
+      "}\n",
+      "{\n",
+      "  name: \"mihir jayavant\",\n",
+      "  email: \"m***@example.com\",\n",
+      "  createdAt: \"2025-11-16T16:59:49.908Z\"\n",
       "}\n"
      ]
     }
@@ -94,7 +103,9 @@
     "// Run through pipe\n",
     "const processed = pipe(user, normalizeName, maskEmail(true), addTimestamp);\n",
     "console.log(processed);\n",
-    "\n"
+    "\n",
+    "const processed2 = pipe(user, normalizeName, maskEmail(false), addTimestamp);\n",
+    "console.log(processed2)"
    ]
   },
   {
