--- a/session3/type-operator.ipynb
+++ b/session3/type-operator.ipynb
@@ -10,6 +10,32 @@
   },
   {
    "cell_type": "markdown",
+   "id": "543074c0",
+   "metadata": {},
+   "source": [
+    "And and Or Operator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "adddfb4f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "type Value<T> = { data: T } | { error: string }\n",
+    "\n",
+    "type User = { name: string } & { age: number }\n",
+    "\n",
+    "const value1: Value<string> = { data: 'data' }\n",
+    "const user: User = {\n",
+    "    name: 'Jon skeet',\n",
+    "    age: 40\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "357ca612",
    "metadata": {},
    "source": [
